--- a/Permanent Notes/생산적으로 사는 법.md
+++ b/Permanent Notes/생산적으로 사는 법.md
@@ -14,6 +14,8 @@ tags: [excalidraw]
 
 [[파인만 공부법]] ^I3KnVzIF
 
+[[PARA 정리법]] ^kTPMEOkl
+
 %%
 # Drawing
 ```json
@@ -24,8 +26,8 @@ tags: [excalidraw]
 	"elements": [
 		{
 			"type": "rectangle",
-			"version": 293,
-			"versionNonce": 7508289,
+			"version": 294,
+			"versionNonce": 1311158141,
 			"isDeleted": false,
 			"id": "7kGriEGV6uk-rkPZb8Ltc",
 			"fillStyle": "hachure",
@@ -50,9 +52,13 @@ tags: [excalidraw]
 				{
 					"id": "Zxa2pczi6niR8l9WnNgBF",
 					"type": "arrow"
+				},
+				{
+					"id": "T6N5kaqVM6BldSWUiDPUW",
+					"type": "arrow"
 				}
 			],
-			"updated": 1696875794086,
+			"updated": 1697429368431,
 			"link": null,
 			"locked": false
 		},
@@ -95,8 +101,8 @@ tags: [excalidraw]
 		},
 		{
 			"type": "iframe",
-			"version": 253,
-			"versionNonce": 2016832207,
+			"version": 301,
+			"versionNonce": 251481011,
 			"isDeleted": false,
 			"id": "I3KnVzIF",
 			"fillStyle": "hachure",
@@ -105,8 +111,8 @@ tags: [excalidraw]
 			"roughness": 1,
 			"opacity": 100,
 			"angle": 0,
-			"x": -904.755311861446,
-			"y": -679.1223297814482,
+			"x": -891.0772874792992,
+			"y": -770.3619513705681,
 			"strokeColor": "#1e1e1e",
 			"backgroundColor": "transparent",
 			"width": 515.6932037666699,
@@ -123,15 +129,15 @@ tags: [excalidraw]
 					"type": "arrow"
 				}
 			],
-			"updated": 1697030233631,
+			"updated": 1697429355207,
 			"link": "[[파인만 공부법]]",
 			"locked": false,
 			"validated": true
 		},
 		{
 			"type": "arrow",
-			"version": 347,
-			"versionNonce": 115226863,
+			"version": 433,
+			"versionNonce": 325016915,
 			"isDeleted": false,
 			"id": "Zxa2pczi6niR8l9WnNgBF",
 			"fillStyle": "hachure",
@@ -141,11 +147,11 @@ tags: [excalidraw]
 			"opacity": 100,
 			"angle": 0,
 			"x": -135.10881228544986,
-			"y": -143.65638249218483,
+			"y": -152.48767267311106,
 			"strokeColor": "#1e1e1e",
 			"backgroundColor": "transparent",
-			"width": 240.9237921127401,
-			"height": 56.082250639193546,
+			"width": 227.24576773059334,
+			"height": 85.3136398485776,
 			"seed": 291182209,
 			"groupIds": [],
 			"frameId": null,
@@ -153,7 +159,7 @@ tags: [excalidraw]
 				"type": 2
 			},
 			"boundElements": [],
-			"updated": 1697030233632,
+			"updated": 1697429355207,
 			"link": null,
 			"locked": false,
 			"startBinding": {
@@ -175,8 +181,8 @@ tags: [excalidraw]
 					0
 				],
 				[
-					-240.9237921127401,
-					-56.082250639193546
+					-227.24576773059334,
+					-85.3136398485776
 				]
 			]
 		},
@@ -218,70 +224,91 @@ tags: [excalidraw]
 			"baseline": 14
 		},
 		{
-			"type": "text",
-			"version": 184,
-			"versionNonce": 74923329,
-			"isDeleted": true,
-			"id": "aQmjT8Bv",
+			"type": "iframe",
+			"version": 161,
+			"versionNonce": 603830237,
+			"isDeleted": false,
+			"id": "kTPMEOkl",
 			"fillStyle": "hachure",
 			"strokeWidth": 2,
 			"strokeStyle": "solid",
 			"roughness": 1,
 			"opacity": 100,
 			"angle": 0,
-			"x": -1040.301622868513,
-			"y": 14.642271377483098,
+			"x": -266.1746809564811,
+			"y": -862.0630640763568,
 			"strokeColor": "#1e1e1e",
 			"backgroundColor": "transparent",
-			"width": 369.26239013671875,
-			"height": 131.72194387067373,
-			"seed": 1867923567,
-			"groupIds": [],
-			"frameId": null,
-			"roundness": null,
-			"boundElements": [],
-			"updated": 1697030221525,
-			"link": "[[Pasted image 20231010032645.png ]]",
-			"locked": false,
-			"fontSize": 22.90816415142152,
-			"fontFamily": 2,
-			"text": "# 1차 자료조사 및 정리\n# 몽몽이한테 설명하기\nPasted image 20231010032645.png\n# 설명하기 어려운 부분 골라내기!\n# 2차 조사 및 2차 정리",
-			"rawText": "# 1차 자료조사 및 정리\n# 몽몽이한테 설명하기\n![[Pasted image 20231010032645.png | 100]]\n# 설명하기 어려운 부분 골라내기!\n# 2차 조사 및 2차 정리",
-			"textAlign": "left",
-			"verticalAlign": "top",
-			"containerId": null,
-			"originalText": "# 1차 자료조사 및 정리\n# 몽몽이한테 설명하기\nPasted image 20231010032645.png\n# 설명하기 어려운 부분 골라내기!\n# 2차 조사 및 2차 정리",
-			"lineHeight": 1.15,
-			"baseline": 126
-		},
-		{
-			"type": "rectangle",
-			"version": 68,
-			"versionNonce": 268430625,
-			"isDeleted": true,
-			"id": "Fj-VRd8-d4k-SPuyOcvYk",
-			"fillStyle": "hachure",
-			"strokeWidth": 2,
-			"strokeStyle": "solid",
-			"roughness": 1,
-			"opacity": 100,
-			"angle": 0,
-			"x": -1066.4187526246192,
-			"y": 5.793834477807195,
-			"strokeColor": "#1e1e1e",
-			"backgroundColor": "transparent",
-			"width": 407.82262318498294,
-			"height": 143.78200650563065,
-			"seed": 1217825327,
+			"width": 501.0352375881,
+			"height": 441.770448138661,
+			"seed": 85540,
 			"groupIds": [],
 			"frameId": null,
 			"roundness": {
 				"type": 3
 			},
-			"boundElements": [],
-			"updated": 1697030223868,
+			"boundElements": [
+				{
+					"id": "T6N5kaqVM6BldSWUiDPUW",
+					"type": "arrow"
+				}
+			],
+			"updated": 1697429368431,
+			"link": "[[PARA 정리법]]",
+			"locked": false,
+			"validated": true
+		},
+		{
+			"id": "T6N5kaqVM6BldSWUiDPUW",
+			"type": "arrow",
+			"x": -63.06762796102885,
+			"y": -162.8484834987446,
+			"width": 4.686523090935566,
+			"height": 249.1632115213058,
+			"angle": 0,
+			"strokeColor": "#1e1e1e",
+			"backgroundColor": "transparent",
+			"fillStyle": "hachure",
+			"strokeWidth": 2,
+			"strokeStyle": "solid",
+			"roughness": 1,
+			"opacity": 100,
+			"groupIds": [],
+			"frameId": null,
+			"roundness": {
+				"type": 2
+			},
+			"seed": 1262756381,
+			"version": 51,
+			"versionNonce": 276550355,
+			"isDeleted": false,
+			"boundElements": null,
+			"updated": 1697429368431,
 			"link": null,
-			"locked": false
+			"locked": false,
+			"points": [
+				[
+					0,
+					0
+				],
+				[
+					4.686523090935566,
+					-249.1632115213058
+				]
+			],
+			"lastCommittedPoint": null,
+			"startBinding": {
+				"elementId": "7kGriEGV6uk-rkPZb8Ltc",
+				"focus": 0.19757221710452388,
+				"gap": 2.9422334987445993
+			},
+			"endBinding": {
+				"elementId": "kTPMEOkl",
+				"focus": 0.15083560906754076,
+				"gap": 8.28092091764546
+			},
+			"startArrowhead": null,
+			"endArrowhead": "arrow"
 		}
 	],
 	"appState": {
@@ -299,10 +326,10 @@ tags: [excalidraw]
 		"currentItemTextAlign": "left",
 		"currentItemStartArrowhead": null,
 		"currentItemEndArrowhead": "arrow",
-		"scrollX": 1226.531435074734,
-		"scrollY": 1125.9848016985939,
+		"scrollX": 1024.0009006497578,
+		"scrollY": 999.1209031056151,
 		"zoom": {
-			"value": 0.5415363979339596
+			"value": 0.5926839026808738
 		},
 		"currentItemRoundness": "round",
 		"gridSize": null,
