--- a/Projects/10월 12일 프론트엔드 면접 스터디 - 면접 질문.md
+++ b/Projects/10월 12일 프론트엔드 면접 스터디 - 면접 질문.md
@@ -1,11 +1,11 @@
 # 12회차 면접 질문 
-## get과 post 메소드의 차이점
+## [[get과 post 메소드의 차이점]]
 
-## 원시형과 객체형의 차이
+## [[원시형과 객체형의 차이]]
 
-## React.Children과 children prop의 차이
+## [[React.Children과 children prop의 차이]]
 
-## 타입스크립트를 도입했을 때의 장점과 단점은 무엇인가요?
+## [[타입스크립트를 도입했을 때의 장점과 단점]]
 ### 장점
 
 - 런타임 타입 에러 방지(컴파일시 타입체크)
