--- a/Projects/10월 5일 프론트엔드 면접 스터디 - 면접 질문.md
+++ b/Projects/10월 5일 프론트엔드 면접 스터디 - 면접 질문.md
@@ -14,58 +14,10 @@ tags:
 - [[#타입스크립트]] 
 	- [[#declare keyword]]
 # 리액트
-## Controlled component vs Uncontrolled component
-- **제어 컴포넌트**  
-	- 사용자가 컴포넌트 값을 업데이트하면 리렌더링이 발생한다.
-	- 제어 컴포넌트의 값은 업데이트 될 때마다 상태를 새롭게 갱신한다.
-	- 불필요한 리렌더링이 발생할 수 있다. -> 스로틀링이나 디바운싱 (throttle&debounce) 필요
-	- Single Source of Truth (신뢰 가능한 단일 출처) -> useState로 컴포넌트 내부에서 업데이트 하기 때문에 state의 값을 신뢰할 수 있음. 
-		- 일관성 유지
-		- 버그 최소화
-		- 보안 강화
-		- 유지 보수 용이성
-	- Ex) 유효성 검사로 버튼 상태 disabled 표시할 때
-    
-- **비제어 컴포넌트**  
-	- 비제어 컴포넌트의 값은 실시간으로 동기화 되지 않는다.
-	- 자체적으로 로컬 상태를 관리한다.
-	- 입력된 값에 접근할려면 ref 를 사용해야한다.
-	- 사용자가 직접 트리거해야 값을 얻을 수 있다.
-	- 컴포넌트는 리액트 state가 아닌 DOM에 의해 제어된다.
-	- Ex) 파일을 추가하는 인풋은 브라우저에 의존하므로 비제어 컴포넌트로 사용.
----
-# References
-- https://velog.io/@yukyung/React-%EC%A0%9C%EC%96%B4-%EC%BB%B4%ED%8F%AC%EB%84%8C%ED%8A%B8%EC%99%80-%EB%B9%84%EC%A0%9C%EC%96%B4-%EC%BB%B4%ED%8F%AC%EB%84%8C%ED%8A%B8%EC%9D%98-%EC%B0%A8%EC%9D%B4%EC%A0%90-%ED%86%BA%EC%95%84%EB%B3%B4%EA%B8%B0
+## [[Controlled component vs Uncontrolled component]]
 # 자바스크립트
-## task queue vs microtask queue
-- **태스크 큐**
-	- Task Queue는 Web API가 수행한 비동기 함수를 넘겨받아 Event Loop가 해당 함수를 Call Stack에 넘겨줄 때까지 비동기 함수들을 쌓아놓는 곳이다.
-	- setTimeOut()
-- **마이크로 태스크 큐**
-	-  마이크로 태스크 큐는 Promise나 async/await, process.nextTick, Object.observe, MutationObserver과 같은 비동기 호출을 넘겨받는다.
-# References
-- https://velog.io/@titu/JavaScript-Task-Queue%EB%A7%90%EA%B3%A0-%EB%8B%A4%EB%A5%B8-%ED%81%90%EA%B0%80-%EB%8D%94-%EC%9E%88%EB%8B%A4%EA%B3%A0-MicroTask-Queue-Animation-Frames-Render-Queue
+## [[task queue vs microtask queue]]
 # 네트워크
-## What happens when you type google.com in your browser and press Enter
-1.  www.google.com 을 입력하면 도메인 이름에 상응하는 IP 주소가 존재하는 지 DNS 기록을 먼저 확인합니다. 존재하면 캐싱된 IP 주소를 바로 반환합니다. 없을 시, DNS 서버에서 검색을 합
-2. 가장 가까운 DNS 서버에서 해당  도메인 이름에 해당하는 IP주소를 찾아(DNS 쿼리를 전달 = Recursive Query) 사용자가 입력한 URL 정보와 함께 전달을 합니다. 
-TCP 연결?
-![[Pasted image 20231005203134.png]]
-3. 전달받은 IP주소를 이용하여 웹 브라우저는 웹 서버에게 HTTP 요청 메세지를 생성하고, 해당 ip 주소의 컴퓨터로 전송합니다 (TCP 프로토콜을 활용하여 통신)
-4. HTTP 프로토콜을 사용하여 웹 페이지 URL 정보로 변환되어 URL 정보에 해당하는 데이터를 검색합니다.
-5. 검색된 웹 페이지 데이터는 또 다시 HTTP 프로토콜을 사용하여 HTTP 응답 메시지를 생성하고 TCP 프로토콜을 사용하여 인터넷을 거쳐 원래 컴퓨터로 전송된다.
-6. 도착한 HTTP 응답 메시지는 HTTP 프로토콜을 사용하여 웹 페이지 데이터로 변환되어 웹 브라우저에 의해 출력되어 사용자가 볼 수 있게 된다. 
-
-# References
-1. https://velog.io/@tnehd1998/%EC%A3%BC%EC%86%8C%EC%B0%BD%EC%97%90-www.google.com%EC%9D%84-%EC%9E%85%EB%A0%A5%ED%96%88%EC%9D%84-%EB%95%8C-%EC%9D%BC%EC%96%B4%EB%82%98%EB%8A%94-%EA%B3%BC%EC%A0%95
-2. https://github.com/WooVictory/Ready-For-Tech-Interview/blob/master/Network/%EC%A3%BC%EC%86%8C%EC%B0%BD%EC%97%90%20naver.com%EC%9D%84%20%EC%B9%98%EB%A9%B4%20%EC%9D%BC%EC%96%B4%EB%82%98%EB%8A%94%20%EC%9D%BC.md
+## [[What happens when you type google.com in your browser and press Enter]]
 # 타입스크립트
-## declare keyword
-declare 키워드는 컴파일러에게 해당 변수나 함수가 이미 존재한다는 것을 알리는 역할을 한다. 다른 영역의 코드에서 declare로 선언된 해당 변수나 함수를 참조할 수 있으며 declare로 선언된 부분은 javascript로 컴파일되지 않는다.
-The TypeScript declare keyword is used to declare variables that may not have originated from a TypeScript file.
-
-
-리액트 디자인 패턴 
-Compound component
-Headless UI
-리액트 Fiber 티어링 
+## [[declare keyword]]
