--- a/Projects/10월 2일 프론트엔드 면접 스터디 - 면접 질문.md
+++ b/Projects/10월 2일 프론트엔드 면접 스터디 - 면접 질문.md
@@ -4,30 +4,16 @@ tags:
   - 인터뷰
   - 그룹_스터디
 ---
-# References
-1. # Index
-- [[#리액트]]
-	- [[#Pure Function]]
-	- [[#useEffect vs useLayoutEffect]]
-- [[#자바스크립트]]
-	- [[#Ajax]]
-	- [[#deep copy vs shallow copy]]
-- [[#네트워크]]
-	- [[#JWT Token]]
-	- [[#cookie vs session]]
-- [[#타입스크립트 ]]
-	- [[#mixin]]
-	- [[#decorator]]
 # 리액트
-## Pure Function
-## useEffect vs useLayoutEffect
+## [[Pure Function]]
+## [[useEffect vs useLayoutEffect]]
 
 # 자바스크립트
-## Ajax
-## deep copy vs shallow copy
+## [[Ajax]]
+## [[deep copy vs shallow copy]]
 # 네트워크
-## JWT Token
-## cookie vs session
+## [[JWT Token]]
+## [[cookie vs session]]
 # 타입스크립트
-## mixin
-## decorator
+## [[mixin]]
+## [[decorator]]
