--- a/Daily/2024-01-02.md
+++ b/Daily/2024-01-02.md
@@ -5,6 +5,12 @@ topic:
 parent_dir: Daily
 ---
 ![[Screenshot 2024-01-02 at 03.15.11.png]]
+- 18:48
+계속 오늘은 게으르게 있다. 날씨도 춥고 뭔가를 하고싶지가 않다. 
+
+- 20:02
+부모님 결혼 기념일이라 식당에 나왔다. 기분이 왜 이렇게 쳐질까? 
+![[IMG_9170.jpeg]]
 
 ----
 # TODO
