--- a/Daily/2024/2024-06/2024-06-25.md
+++ b/Daily/2024/2024-06/2024-06-25.md
@@ -175,14 +175,95 @@ public class ListStack implements StackInterface {
 }
 ```
 
+- 정답
+```java
+public class ListStack<E> implements StackInterface<E> {
+    private ListInterface<E> list;
+
+    public ListStack() {
+        list = new LinkedList<E>(); // You can use ArrayList as well
+    }
+
+    public void push(E newItem) {
+        list.add(list.len() + 1, newItem); // 리스트 끝에 추가
+    }
+
+    public E pop() {
+        E x = list.get(list.len()); // 마지막 요소 받아오기
+        list.remove(list.len()); // 마지막 요소 지우기
+        return x;
+    }
+
+    public E top() {
+        return list.get(list.len()); // 마지막 요소 리턴
+    }
+
+    public boolean isEmpty() {
+        return list.isEmpty();
+    }
+
+    public void popAll() {
+        list.clear();
+    }
+} 
+```
+
 03. [코드 6-4]는 가장 기본적인 연결 리스트를 사용하여 스택을 구현한 것이다. 이를 더미 헤드 노드를 가진 연결 리스트로 바꾸어보시오.
+```java
+package stack;
+import list.Node;
+
+public class LinkedStack<E> implements StackInterface<E> {
+    private Node<E> dummyHead;
+    private final E ERROR = null; // 임의의 에러 값
+
+    public LinkedStack() {
+        dummyHead = new Node<>(null, null); // Initialize dummy head node
+    }
+
+    // [알고리즘 6-7] 구현: 스택에 원소 x 삽입하기
+    public void push(E newItem) {
+        dummyHead.next = new Node<>(newItem, dummyHead.next);
+    }
+
+    // [알고리즘 6-8] 구현: 스택에서 원소 삭제하기
+    public E pop() {
+        if (isEmpty()) return ERROR;
+        else {
+            Node<E> temp = dummyHead.next;
+            dummyHead.next = temp.next;
+            return temp.item;
+        }
+    }
+
+    // [알고리즘 6-9] 구현: 스택 탑 원소 알려주기
+    public E top() {
+        if (isEmpty()) return ERROR;
+        else return dummyHead.next.item;
+    }
+
+    // [알고리즘 6-10] 구현: 스택이 비었는지 확인하기
+    public boolean isEmpty() {
+        return (dummyHead.next == null);
+    }
+
+    // [알고리즘 6-11] 구현: 스택 비우기
+    public void popAll() {
+        dummyHead.next = null;
+    }
+}
+```
 
 04. 스택을 이용해서 입력으로 들어온 문자열이 다음 집합의 원소인지 체크하는 코드를 작성하시오. 자바 코드에 구애받지 않고, 알고리즘의 의미가 통하도록 작성하면 된다.
+
+>❓: 저 달러싸인은 뭐지? 원래 이런 집합표시가 있는건가?
+
 ```
-{ w$w^R | w: 문자열, w^R: w의 순서를 뒤집어 놓은 것 }
+{ w$wR | w: 문자열, wR: w의 순서를 뒤집어 놓은 것 }
 ```
 
 05. [코드 6-2]의 배열 기반 스택 구현에서 스택의 모든 원소를 프린트하는 것은 개발 과정에서 유용할 때가 있다. [코드 6-2]에 스택의 모든 원소를 탐부터 시작하여 프린트하는 메서드 `printAll()`을 추가하시오. 편의상 가상 타입 E는 int 타입이라고 가정한다.
+
 
 06. [코드 6-4]의 연결 리스트 기반 스택 구현에서 05번 문제와 같은 조건으로 메서드 printAll()을 추가하시오.
 
